# SPDX-FileCopyrightText: Copyright (c) <2025> NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==80.10.2",
    "wheel",
]

[project]
name = "cuda-tile"
dynamic = ["version"]
description = "CUDA Tile Compiler"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" }
]
license = "Apache-2.0"
license-files = ["LICENSES/*"]
requires-python = ">=3.10, <3.14"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
  "typing-extensions",
]

[project.optional-dependencies]
tileiras = [
  "nvidia-cuda-tileiras>=13.2,<13.3",
  "nvidia-cuda-nvcc>=13.2,<13.3",
  "nvidia-nvvm>=13.2,<13.3",
]

[project.urls]
Homepage = "https://github.com/nvidia/cutile-python"
Repository = "https://github.com/nvidia/cutile-python"
documentation = "https://docs.nvidia.com/cuda/cutile-python"
"Bug Tracker" = "https://github.com/nvidia/cutile-python/issues"

[tool.setuptools.dynamic]
version = {file = "src/cuda/tile/VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "cuda.tile",
    "cuda.tile.compilation",
    "cuda.tile._ir",
    "cuda.tile._passes",
    "cuda.tile._bytecode",
]

[tool.setuptools.package-data]
"cuda.tile" = ["VERSION"]


[tool.uv]
managed = true
